# aliIot-c

./: CMakeLists.txt  Readme.md
src/: aliIot.c  sha1.c  sha1.h
